<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FeedR</string>
    <string name="hello_world">Hello world!</string>
    <string name="favorite">Favorite</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_add_category">Add category</string>
    <string name="action_unread_all">Mark all as unread</string>
    <string name="action_read_all">Mark all as read</string>
    <string name="action_set_alarm">Set alarm</string>
    <string name="action_star">Add to favorite list</string>
    <string name="action_filter">Filter</string>
    <string name="title_activity_feed">FeedActivity</string>

    <!-- Main Actovoty -->
    <string name="title_add_category">Category name</string>
    <string name="choose_category_name">Choose a category name</string>
    <string name="name_already_use">Name already use</string>
    <string name="update_category">Update category</string>
    <string name="delete_item_category">Delete</string>
    <string name="update_item_category">Update</string>
    <string name="all">All</string>
    <string name="credits">Credits</string>

    <!-- Feed Activity -->
    <string name="feed_already_add">Feed already add</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_category">Add category</string>
    <string name="all_news_set_read">All news has been marked as read</string>
    <string name="all_news_set_unread">All news has been marked as unread</string>
    <string name="choose_time_interval">Set time interval to fetch new data</string>
    <string name="filter_hint">Filter</string>

    <string-array name="interval_time">
        <!--<item>every 15 minutes</item>-->
        <!--<item>every 30 minutes</item>-->
        <item>Every hours</item>
        <item>Twice a day</item>
        <item>Once a day</item>
        <item>Never</item>
    </string-array>

    <!-- News Activity -->
    <string name="add_to_favorite">was add to favorite</string>
    <string name="remove_from_favorite">Removed from favorite</string>

    <!-- Category Activity -->
    <string name="save">Save</string>
    <string name="title_search_feed">Search a feed / URL</string>
    <string name="exit_without_saving">Are you sure you want to exit without saving?</string>
    <string name="query_empty">Query is empty</string>
    <string name="choose_feed">Choose feeds</string>
    <string name="wait">Please wait...</string>
    <string name="url_copy_to_clipboard">Url copied to clipboard</string>

    <!-- News Fragment -->
    <string name="download_sharing_app">is not installed on your device.\nDo you want to download it?</string>

    <!-- AppRater -->
    <string name="rate">Rate</string>
    <string name="rate_app">"If you enjoy using FeedR, please take a moment to rate it. Thanks for your support!"</string>
    <string name="remind_me_later">"Remind me later"</string>
    <string name="no_thanks">"No, thanks"</string>

    <!--Showcase-->
    <string name="category_list_showcase_1">This is the list of your feeds\nCick on a feed to view news</string>
    <string name="feed_list_showcase_1">Pull down to fetch news</string>
    <string name="feed_list_showcase_2">Click on a row to view news</string>
    <string name="feed_list_showcase_3">Click on the circle\nin the right corner\nto set all news as read or unread</string>
    <string name="news_list_showcase_1">Swipe to left or right\n to switch to other aticles</string>

    <!-- Credits -->
    <string name="credit_the_noun_project_title">Thank to <a href="http://thenounproject.com">The Noun Project</a> website where I found awesome icons:</string>
    <string name="credit_tnp_authors">Bell icon by Juliette Wagner\nStar icon by Edward Boatman\nHand icon by Herbert Spencer</string>
    <string name="credit_library_title">Also I thank the developers of these really good libraries that I found on <a href="http://github.com">GitHub</a> and that I use for this app:</string>
    <string name="credit_libraries"><a href="https://github.com/amlcurran/ShowcaseView">ShowcaseView</a> by Amlcurran\n<a href="https://github.com/futuresimple/android-floating-action-button">android-floating-action-button</a> by Futursimple\n<a href="https://github.com/47deg/android-swipelistview">android-swipelistview</a> by 47deg</string>
    <string name="share_app">Download FeedR - News Feed Reader at https://play.google.com/store/apps/details?id=com.sokss.feedr.app</string>

    <string name="title_activity_view_image">ViewImageActivity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
