<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="0dp"
    android:orientation="vertical"
    android:background="@color/background_material_light"
    tools:context="com.sokss.feedr.app.CreditActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp"
            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_heart"
                android:tint="@color/red"
                android:layout_gravity="center_vertical|left"
                android:id="@+id/rate_me"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rate_app"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/rate_me_text"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_tnp"
                android:layout_gravity="center_vertical"
                android:id="@+id/tnp"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:text="@string/credit_the_noun_project_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColorLink="@color/blue"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/tnp_text"
                    />

                <TextView
                    android:text="@string/credit_tnp_authors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_github"
                android:layout_gravity="center_vertical"
                android:id="@+id/github"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:text="@string/credit_library_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColorLink="@color/blue"
                    android:textSize="20sp"
                    android:paddingBottom="5dp"
                    android:id="@+id/github_text"
                    />

                <TextView
                    android:textColorLink="@color/blue"
                    android:text="@string/credit_libraries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/github_text_authors"
                    />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_share"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/share_app"
            />
    </LinearLayout>

</ScrollView>
